# compgraph2txt

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: testing.yml  tests.yml
compgraph2txt/: __init__.py  _impl.py
compgraph2txt/tests/: test_compgraph2txt.py
